force-app/main/default/objects/Project_Developer_Assignment__c/Project_Developer_Assignment__c.object-meta.xml
<CustomObject>
    <label>Project Developer Assignment</label>
    <nameField>
        <label>Project Developer Assignment Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Project Developer Assignments</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>