force-app/main/default/objects/Project_Developer_Assignment__c/fields/Call_Responsibility__c.field-meta.xml
<CustomField>
    <fullName>Call_Responsibility__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Call Responsibility</label>
    <type>Checkbox</type>
</CustomField>