force-app/main/default/objects/Project_Developer_Assignment__c/fields/Development_Responsibility__c.field-meta.xml
<CustomField>
    <fullName>Development_Responsibility__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Development Responsibility</label>
    <type>Checkbox</type>
</CustomField>