force-app/main/default/objects/Project_Developer_Assignment__c/fields/Resource__c.field-meta.xml
<CustomField>
    <fullName>Resource__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Resource</label>
    <referenceTo>Resource__c</referenceTo>
    <relationshipLabel>Project Developer Assignments</relationshipLabel>
    <relationshipName>Project_Developer_Assignments</relationshipName>
    <type>Lookup</type>
</CustomField>