force-app/main/default/objects/Project_Developer_Assignment__c/fields/Role__c.field-meta.xml
<CustomField>
    <fullName>Role__c</fullName>
    <label>Role</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Client Facing</fullName>
            </value>
            <value>
                <fullName>Backend Developer</fullName>
            </value>
            <value>
                <fullName>Tech Lead</fullName>
            </value>
            <value>
                <fullName>Complete(Both)</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>