force-app/main/default/objects/Project_Developer_Assignment__c/fields/Supporting_Resource__c.field-meta.xml
<CustomField>
    <fullName>Supporting_Resource__c</fullName>
    <formula>Project__r.Supporting_Resource__r.Name</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Supporting Resource</label>
    <type>Text</type>
</CustomField>