force-app/main/default/objects/Project_Developer_Assignment__c/listViews/All.listView-meta.xml
<ListView>
    <fullName>All</fullName>
    <columns>NAME</columns>
    <columns>Project__c</columns>
    <columns>Resource__c</columns>
    <columns>Supporting_Resources__c</columns>
    <columns>Development_Responsibility__c</columns>
    <columns>Call_Responsibility__c</columns>
    <columns>Role__c</columns>
    <filterScope>Everything</filterScope>
    <label>All</label>
</ListView>