force-app/main/default/objects/Project_Developer_Assignment__c/listViews/Archived_Project.listView-meta.xml
<ListView>
    <fullName>Archived_Project</fullName>
    <columns>NAME</columns>
    <columns>Project__c</columns>
    <columns>Resource__c</columns>
    <columns>Start_Date__c</columns>
    <columns>Supporting_Resource__c</columns>
    <columns>Call_Responsibility__c</columns>
    <columns>Development_Responsibility__c</columns>
    <columns>Is_Active__c</columns>
    <filterScope>Mine</filterScope>
    <filters>
        <field>Is_Active__c</field>
        <operation>equals</operation>
        <value>0</value>
    </filters>
    <label>Archived Project</label>
</ListView>